[gd_scene load_steps=5 format=2]

[ext_resource path="res://res/pyrate_theme.tres" type="Theme" id=1]
[ext_resource path="res://niveles/nivel_11_ui/main_menu.gd" type="Script" id=2]
[ext_resource path="res://assets/ui/Small Banner (guide).png" type="Texture" id=3]
[ext_resource path="res://niveles/nivel_10_save_system/WindowDialog_slot_dialog.tscn" type="PackedScene" id=4]

[node name="main_menu" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -119.0
margin_top = -119.0
margin_right = 119.0
margin_bottom = 119.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false,
"_edit_vertical_guides_": [ 116.0 ]
}

[node name="Title" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Title"]
margin_left = 2.0
margin_top = -1.0
margin_right = 80.0
margin_bottom = 16.0
rect_scale = Vector2( 3, 3 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Title"]
margin_left = 56.0
margin_top = 5.0
margin_right = 136.0
margin_bottom = 23.0
rect_scale = Vector2( 1.5, 1.5 )
theme = ExtResource( 1 )
text = "TREASURE HUNTERS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 62.0
margin_top = 56.0
margin_right = 174.0
margin_bottom = 196.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="MarginContainer"]
margin_right = 112.0
margin_bottom = 156.0
theme = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_right = 112.0
margin_bottom = 156.0

[node name="VSeparator" type="VSeparator" parent="MarginContainer/HBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 28.0
margin_bottom = 156.0
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 32.0
margin_right = 80.0
margin_bottom = 156.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator" type="HSeparator" parent="MarginContainer/HBoxContainer/VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 48.0
margin_bottom = 4.0
size_flags_vertical = 3

[node name="HSeparator6" type="HSeparator" parent="MarginContainer/HBoxContainer/VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 8.0
margin_right = 48.0
margin_bottom = 12.0
size_flags_vertical = 3

[node name="Button_start" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 16.0
margin_right = 48.0
margin_bottom = 38.0
theme = ExtResource( 1 )
text = "NEW GAME"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator3" type="HSeparator" parent="MarginContainer/HBoxContainer/VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 42.0
margin_right = 48.0
margin_bottom = 46.0
size_flags_vertical = 3

[node name="Button_load" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 50.0
margin_right = 48.0
margin_bottom = 72.0
disabled = true
text = "LOAD GAME"

[node name="HSeparator4" type="HSeparator" parent="MarginContainer/HBoxContainer/VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 76.0
margin_right = 48.0
margin_bottom = 80.0
size_flags_vertical = 3

[node name="Button_setup" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 84.0
margin_right = 48.0
margin_bottom = 106.0
text = "SETUP"

[node name="HSeparator5" type="HSeparator" parent="MarginContainer/HBoxContainer/VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 110.0
margin_right = 48.0
margin_bottom = 114.0
size_flags_vertical = 3

[node name="Button_exit" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 118.0
margin_right = 48.0
margin_bottom = 140.0
text = "EXIT"

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/HBoxContainer/VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 144.0
margin_right = 48.0
margin_bottom = 148.0
size_flags_vertical = 3

[node name="HSeparator7" type="HSeparator" parent="MarginContainer/HBoxContainer/VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 152.0
margin_right = 48.0
margin_bottom = 156.0
size_flags_vertical = 3

[node name="VSeparator2" type="VSeparator" parent="MarginContainer/HBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 84.0
margin_right = 112.0
margin_bottom = 156.0
size_flags_horizontal = 3

[node name="WindowDialog" parent="." instance=ExtResource( 4 )]
visible = false

[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Button_start" to="." method="_on_Button_start_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Button_load" to="." method="_on_Button_load_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Button_setup" to="." method="_on_Button_setup_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Button_exit" to="." method="_on_Button_exit_pressed"]
